# sutd_bmi_safety

./: .gitmodules
src/testbed/adc-live/: package-lock.json
src/testbed/ml/: Makefile  pyproject.toml  semg_train_mlp.py
src/testbed/semg_arduino_slave/: semg_arduino_slave.ino
